v410-qa-from-jessie-0531

--- a/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/1.cleaning-up-backed-up-data-automatically.md
+++ b/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/1.cleaning-up-backed-up-data-automatically.md
@@ -2,9 +2,9 @@
 
 You can set a backup cleanup strategy for a tenant as needed. After you set a cleanup strategy for a tenant, automatic cleanup will be triggered for the tenant every hour so that expired backup data can be promptly cleaned up.
 
-## Usage notes
+## Considerations
 
-* The cleanup of the archived log data depends on data backup. Before you clean up archived log data, confirm that a data backup file exists. If no data backup file exists, the archived log data cannot be cleaned up.
+* The cleanup of the archive log data depends on data backup. Before you clean up archive log data, confirm that a data backup file exists. If no data backup file exists, the archived log data cannot be cleaned up.
 
 * Automatic cleanup applies only to the data at the backup destinations specified by `data_backup_dest` and `log_archive_dest`. If the backup destination changes, the expired backup data cannot be cleaned up in OceanBase Database.
 
@@ -20,19 +20,15 @@ You can set a backup cleanup strategy for a tenant as needed. After you set a cl
 
 2. Set a cleanup strategy. This is equivalent to enabling automatic cleanup for the tenant.
 
-   Sample statement:
-
-   ```sql
+   ```shell
    obclient> ALTER SYSTEM ADD DELETE BACKUP POLICY policy_name RECOVERY_WINDOW recovery_window;
    ```
 
-   Notes:
-
    * The `POLICY` parameter specifies the name of the cleanup strategy. It can be set to `default` only, which indicates that automatic cleanup applies only to the data in the backup destinations specified by `data_backup_dest` and `log_archive_dest`.
 
-   * The `RECOVERY_WINDOW` parameter specifies the time window for recovering backup data. For more information about this parameter, see [About the recovery_window parameter](5.parameters-of-cleaning-up-backup.md).
+   * The `RECOVERY_WINDOW` parameter specifies the time window for restoring backup data. For more information about this parameter, see [About the recovery_window parameter](5.parameters-of-cleaning-up-backup.md).
 
-   Example:
+   Here is an example:
 
    ```shell
    obclient> ALTER SYSTEM ADD DELETE BACKUP POLICY 'default' RECOVERY_WINDOW '7d';
@@ -40,27 +36,23 @@ You can set a backup cleanup strategy for a tenant as needed. After you set a cl
 
 ### Set a cleanup strategy in the sys tenant
 
-1. Log on to the `sys` tenant of a cluster as the `root` user.
+1. Log on to the `sys` tenant of the cluster as the `root` user.
 
 2. Set a cleanup strategy. This is equivalent to enabling automatic cleanup for the tenant.
 
-   Sample statement:
-
-   ```sql
+   ```shell
    obclient> ALTER SYSTEM ADD DELETE BACKUP POLICY policy_name RECOVERY_WINDOW recovery_window TENANT tenant_name;
    ```
 
-   Notes:
-
    * The `POLICY` parameter specifies the name of the cleanup strategy. It can be set to `default` only, which indicates that automatic cleanup applies only to the data in the backup destinations specified by `data_backup_dest` and `log_archive_dest`.
 
-   * The `RECOVERY_WINDOW` parameter specifies the time window for recovering backup data. For more information about this parameter, see [About the recovery_window parameter](5.parameters-of-cleaning-up-backup.md).
+   * The `RECOVERY_WINDOW` parameter specifies the time window for restoring backup data. For more information about this parameter, see [About the recovery_window parameter](5.parameters-of-cleaning-up-backup.md).
 
    * The `TENANT` parameter specifies the tenant on which the cleanup strategy takes effect. You can specify the name of only one user tenant.
 
   <main id="notice" type='notice'>
-    <h4>Notice:</h4>
-    <p>At present, you can set only tenant-level cleanup strategies but not cluster-level cleanup strategies. Each statement sets one cleanup strategy for only one tenant. </p>
+  <h4>Notice</h4>
+  <p>At present, you can set only tenant-level cleanup strategies but not cluster-level cleanup strategies. Each statement sets one cleanup strategy for only one tenant. </p>
   </main>
 
 To set a cleanup strategy for the `MySQL` tenant from the sys tenant, execute the following statement:
@@ -79,7 +71,7 @@ You can query views for the configured cleanup strategies of all tenants from th
 
    * Query the `oceanbase.CDB_OB_BACKUP_DELETE_POLICY` view for the cleanup strategies of all tenants from the sys tenant.
 
-      Example:
+      For example:
 
       ```shell
       obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_POLICY;
@@ -93,10 +85,10 @@ You can query views for the configured cleanup strategies of all tenants from th
 
    * Query the `oceanbase.DBA_OB_BACKUP_DELETE_POLICY` or `sys.DBA_OB_BACKUP_DELETE_POLICY` view for the cleanup strategies of the current user tenant.
 
-      * MySQL tenants
+      * MySQL tenant
 
-         ```shell
-         obclient> SELECT * FROM oceanbase.DBA_OB_BACKUP_DELETE_POLICY;
+         ```sql
+         obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_BACKUP_DELETE_POLICY;
          +-------------+-----------------+
          | POLICY_NAME | RECOVERY_WINDOW |
          +-------------+-----------------+
@@ -105,10 +97,10 @@ You can query views for the configured cleanup strategies of all tenants from th
          1 row in set
          ```
 
-      * Oracle tenants
+      * Oracle tenant
 
-         ```shell
-         obclient> SELECT * FROM sys.DBA_OB_BACKUP_DELETE_POLICY;
+         ```sql
+         obclient [SYS]> SELECT * FROM sys.DBA_OB_BACKUP_DELETE_POLICY;
          +-------------+-----------------+
          | POLICY_NAME | RECOVERY_WINDOW |
          +-------------+-----------------+
