--- a/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/6.views-of-cleaning-up-backup.md
+++ b/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/6.views-of-cleaning-up-backup.md
@@ -4,24 +4,24 @@
 
 You can query this view from the sys tenant for the progress of ongoing backup cleanup jobs of all tenants.
 
-| Field | Description                                                                                                                                                                                                                                                                                                                        |
-|------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| TENANT_ID | The ID of the tenant.                                                                                                                                                                                                                                                                                                              |
-| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants.                                                                                                                                                                                                                                                         |
-| INCARNATION | The ID of the incarnation.                                                                                                                                                                                                                                                                                                         |
-| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated.                                                                                                                                                                                                                                                                      |
-| INITIATOR_JOB_ID | The ID of the initiated cleanup job.                                                                                                                                                                                                                                                                                               |
-| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed.                                                                                                                                                                                                                                                                  |
-| TYPE | The cleanup type.<ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data.</li></ul>                                                                                                                                                                                                                              |
-| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job.                                                                                                                                                                                                                                                       |
-| JOB_LEVEL | The job initiation level. Valid values: <ul><li> `USER_TENANT`: The job is initiated by a user tenant.</li><li> `SYS_TENANT`: The job is initiated by the sys tenant.</li></ul>                                                                                                                                                    |
-| START_TIMESTAMP | The time on the tenant when the task started.                                                                                                                                                                                                                                                                                      |
-| END_TIMESTAMP | The time on the tenant when the task ended.                                                                                                                                                                                                                                                                                        |
-| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The job is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TASK_COUNT | The total number of backup set and backup piece tasks.                                                                                                                                                                                                                                                                             |
-| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks.                                                                                                                                                                                                                                                                        |
-| RESULT | The execution result, which is an error code.                                                                                                                                                                                                                                                                                      |
-| COMMENT | The description of a failed cleanup task.                                                                                                                                                                                                                                                                                          |
+| Field | Description |
+|------|-------|
+| TENANT_ID | The ID of the tenant.  |
+| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants.  |
+| INCARNATION | The ID of the incarnation.  |
+| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated.  |
+| INITIATOR_JOB_ID | The ID of the initiated cleanup job.  |
+| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed.  |
+| TYPE | The cleanup type. <ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data. </li></ul> |
+| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job.  |
+| JOB_LEVEL | The job initiation level. Valid values: <ul><li> `USER_TENANT`: The job is initiated by a user tenant. </li><li> `SYS_TENANT`: The job is initiated by the sys tenant. </li></ul> |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The job is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TASK_COUNT | The total number of backup set and backup piece tasks.  |
+| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks.  |
+| RESULT | The execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
 
 ## DBA_OB_BACKUP_DELETE_JOBS
 
@@ -29,21 +29,21 @@ You can query this view from a user tenant for the progress of ongoing backup cl
 
 | Field | Description |
 |------|-------|
-| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants. |
-| INCARNATION | The ID of the incarnation. |
-| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated. |
-| INITIATOR_JOB_ID | The ID of the initiated cleanup job. |
-| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed. |
-| TYPE | The cleanup type.<ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data.</li></ul> |
-| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job. |
-| JOB_LEVEL | The job initiation level. Valid values:<ul><li> `USER_TENANT`: The job is initiated by a user tenant.</li><li> `SYS_TENANT`: The job is initiated by the sys tenant.</li></ul> |
-| START_TIMESTAMP | The time on the tenant when the task started. |
-| END_TIMESTAMP | The time on the tenant when the task ended. |
-| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The job is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TASK_COUNT | The total number of backup set and backup piece tasks. |
-| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks. |
-| RESULT | The execution result, which is an error code. |
-| COMMENT | The description of a failed cleanup task. |
+| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants.  |
+| INCARNATION | The ID of the incarnation.  |
+| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated.  |
+| INITIATOR_JOB_ID | The ID of the initiated cleanup job.  |
+| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed.  |
+| TYPE | The cleanup type. <ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data. </li></ul> |
+| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job.  |
+| JOB_LEVEL | The job initiation level. Valid values:<ul><li> `USER_TENANT`: The job is initiated by a user tenant. </li><li> `SYS_TENANT`: The job is initiated by the sys tenant. </li></ul> |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The job is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TASK_COUNT | The total number of backup set and backup piece tasks.  |
+| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks.  |
+| RESULT | The execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
 
 ## CDB_OB_BACKUP_DELETE_JOB_HISTORY
 
@@ -51,22 +51,22 @@ You can query this view from the sys tenant for the history of completed backup 
 
 | Field | Description |
 |------|-------|
-| TENANT_ID | The ID of the tenant. |
-| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants. |
-| INCARNATION | The ID of the incarnation. |
-| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated. |
-| INITIATOR_JOB_ID | The ID of the initiated cleanup job. |
-| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed. |
-| TYPE | The cleanup type.<ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data.</li></ul> |
-| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job. |
-| JOB_LEVEL | The job initiation level. Valid values:<ul><li> `USER_TENANT`: The job is initiated by a user tenant.</li><li> `SYS_TENANT`: The job is initiated by the sys tenant.</li></ul> |
-| START_TIMESTAMP | The time on the tenant when the task started. |
-| END_TIMESTAMP | The time on the tenant when the task ended. |
-| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The job is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TASK_COUNT | The total number of backup set and backup piece tasks. |
-| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks. |
-| RESULT | The execution result, which is an error code. |
-| COMMENT | The description of a failed cleanup task. |
+| TENANT_ID | The ID of the tenant.  |
+| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants.  |
+| INCARNATION | The ID of the incarnation.  |
+| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated.  |
+| INITIATOR_JOB_ID | The ID of the initiated cleanup job.  |
+| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed.  |
+| TYPE | The cleanup type. <ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data. </li></ul> |
+| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job.  |
+| JOB_LEVEL | The job initiation level. Valid values:<ul><li> `USER_TENANT`: The job is initiated by a user tenant. </li><li> `SYS_TENANT`: The job is initiated by the sys tenant. </li></ul> |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The job is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TASK_COUNT | The total number of backup set and backup piece tasks.  |
+| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks.  |
+| RESULT | The execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
 
 ## DBA_OB_BACKUP_DELETE_JOB_HISTORY
 
@@ -74,21 +74,21 @@ You can query this view from a user tenant for the history of completed backup c
 
 | Field | Description |
 |------|-------|
-| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants. |
-| INCARNATION | The ID of the incarnation. |
-| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated. |
-| INITIATOR_JOB_ID | The ID of the initiated cleanup job. |
-| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed. |
-| TYPE | The cleanup type.<ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data.</li></ul> |
-| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job. |
-| JOB_LEVEL | The job initiation level. Valid values:<ul><li> `USER_TENANT`: The job is initiated by a user tenant.</li><li> `SYS_TENANT`: The job is initiated by the sys tenant.</li></ul> |
-| START_TIMESTAMP | The time on the tenant when the task started. |
-| END_TIMESTAMP | The time on the tenant when the task ended. |
-| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The job is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TASK_COUNT | The total number of backup set and backup piece tasks. |
-| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks. |
-| RESULT | The execution result, which is an error code. |
-| COMMENT | The description of a failed cleanup task. |
+| JOB_ID | The ID of the executed cleanup job. Job IDs are independent among tenants.  |
+| INCARNATION | The ID of the incarnation.  |
+| INITIATOR_TENANT_ID | The ID of the tenant from which the cleanup job is initiated.  |
+| INITIATOR_JOB_ID | The ID of the initiated cleanup job.  |
+| EXECUTOR_TENANT_ID | The list of IDs of tenants for which the cleanup job is executed.  |
+| TYPE | The cleanup type. <ul><li> `DELETE OBSOLETE BACKUP`: specifies to clean expired backup data. </li></ul> |
+| PARAMETER | The cleanup parameter that specifies the expiration time of the cleanup job.  |
+| JOB_LEVEL | The job initiation level. Valid values:<ul><li> `USER_TENANT`: The job is initiated by a user tenant. </li><li> `SYS_TENANT`: The job is initiated by the sys tenant. </li></ul> |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The job is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TASK_COUNT | The total number of backup set and backup piece tasks.  |
+| SUCCESS_TASK_COUNT | The number of successful backup set and backup piece tasks.  |
+| RESULT | The execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
 
 ## CDB_OB_BACKUP_DELETE_TASKS
 
@@ -96,22 +96,22 @@ You can query this view from the sys tenant for the progress of ongoing backup s
 
 | Field | Description |
 |------|-------|
-| TENANT_ID | The ID of the tenant. |
+| TENANT_ID | The ID of the tenant.  |
 | TASK_ID | The task ID. One task corresponds to one backup set or backup piece. |
-| INCARNATION | The ID of the incarnation. |
-| JOB_ID | The ID of the job to which the task belongs. |
+| INCARNATION | The ID of the incarnation.  |
+| JOB_ID | The ID of the job to which the task belongs.  |
 | TASK_TYPE | The task type. Valid values:<ul><li> `BACKUP SET`: a backup set cleanup task</li><li>`BACKUP PIECE`: a backup piece cleanup task</li></ul> |
 | ID | The ID of the backup set or backup piece to be cleaned. |
 | ROUND_ID | The round of log archiving when the task type is `BACKUP PIECE`. |
-| DEST_ID | The ID of the backup destination. |
-| START_TIMESTAMP | The time on the tenant when the task started. |
-| END_TIMESTAMP | The time on the tenant when the task ended. |
-| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The task is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TOTAL_LS_COUNT | The total number of log streams under the task. |
-| FINISH_LS_COUNT | The number of successful log stream tasks. |
-| RESULT | The task execution result, which is an error code. |
-| COMMENT | The description of a failed cleanup task. |
-| PATH | The path where the backup data is located. |
+| DEST_ID | The ID of the backup destination.  |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The task is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TOTAL_LS_COUNT | The total number of log streams under the task.  |
+| FINISH_LS_COUNT | The number of successful log stream tasks.  |
+| RESULT | The task execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
+| PATH | The path where the backup data is located.  |
 
 ## DBA_OB_BACKUP_DELETE_TASKS
 
@@ -120,20 +120,20 @@ You can query this view from a user tenant for the progress of ongoing backup se
 | Field | Description |
 |------|-------|
 | TASK_ID | The task ID. One task corresponds to one backup set or backup piece. |
-| INCARNATION | The ID of the incarnation. |
-| JOB_ID | The ID of the job to which the task belongs. |
+| INCARNATION | The ID of the incarnation.  |
+| JOB_ID | The ID of the job to which the task belongs.  |
 | TASK_TYPE | The task type. Valid values: <ul><li> `BACKUP SET`: a backup set cleanup task </li><li>`BACKUP PIECE`: a backup piece cleanup task</li></ul> |
 | ID | The ID of the backup set or backup piece to be cleaned. |
-| ROUND_ID | The round of log archiving when the task type is `BACKUP PIECE`. |
-| DEST_ID | The ID of the backup destination. |
-| START_TIMESTAMP | The time on the tenant when the task started. |
-| END_TIMESTAMP | The time on the tenant when the task ended. |
-| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The task is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TOTAL_LS_COUNT | The total number of log streams under the task. |
-| FINISH_LS_COUNT | The number of successful log stream tasks. |
-| RESULT | The task execution result, which is an error code. |
-| COMMENT | The description of a failed cleanup task. |
-| PATH | The path where the backup data is located. |
+| ROUND_ID | The round of log archiving when the task type is `BACKUP PIECE`.  |
+| DEST_ID | The ID of the backup destination.  |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The task is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TOTAL_LS_COUNT | The total number of log streams under the task.  |
+| FINISH_LS_COUNT | The number of successful log stream tasks.  |
+| RESULT | The task execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
+| PATH | The path where the backup data is located.  |
 
 ## CDB_OB_BACKUP_DELETE_TASK_HISTORY
 
@@ -141,22 +141,22 @@ You can query this view from the sys tenant for the history of completed backup 
 
 | Field | Description |
 |------|-------|
-| TENANT_ID | The ID of the tenant. |
+| TENANT_ID | The ID of the tenant.  |
 | TASK_ID | The task ID. One task corresponds to one backup set or backup piece. |
-| INCARNATION | The ID of the incarnation. |
-| JOB_ID | The ID of the job to which the task belongs. |
+| INCARNATION | The ID of the incarnation.  |
+| JOB_ID | The ID of the job to which the task belongs.  |
 | TASK_TYPE | The task type. Valid values: <ul><li> `BACKUP SET`: a backup set cleanup task</li><li>`BACKUP PIECE`: a backup piece cleanup task</li></ul> |
 | ID | The ID of the backup set or backup piece to be cleaned. |
 | ROUND_ID | The round of log archiving when the task type is `BACKUP PIECE`. |
-| DEST_ID | The ID of the backup destination. |
-| START_TIMESTAMP | The time on the tenant when the task started. |
-| END_TIMESTAMP | The time on the tenant when the task ended. |
-| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The task is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TOTAL_LS_COUNT | The total number of log streams under the task. |
-| FINISH_LS_COUNT | The number of successful log stream tasks. |
-| RESULT | The task execution result, which is an error code. |
-| COMMENT | The description of a failed cleanup task. |
-| PATH | The path where the backup data is located. |
+| DEST_ID | The ID of the backup destination.  |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values: <ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The task is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TOTAL_LS_COUNT | The total number of log streams under the task.  |
+| FINISH_LS_COUNT | The number of successful log stream tasks.  |
+| RESULT | The task execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
+| PATH | The path where the backup data is located.  |
 
 ## DBA_OB_BACKUP_DELETE_TASK_HISTORY
 
@@ -165,20 +165,20 @@ You can query this view from a user tenant for the history of completed backup s
 | Field | Description |
 |------|-------|
 | TASK_ID | The task ID. One task corresponds to one backup set or backup piece. |
-| INCARNATION | The ID of the incarnation. |
-| JOB_ID | The ID of the job to which the task belongs. |
+| INCARNATION | The ID of the incarnation.  |
+| JOB_ID | The ID of the job to which the task belongs.  |
 | TASK_TYPE | The task type. Valid values: <ul><li> `BACKUP SET`: a backup set cleanup task</li><li>`BACKUP PIECE`: a backup piece cleanup task</li></ul> |
 | ID | The ID of the backup set or backup piece to be cleaned. |
-| ROUND_ID | The round of log archiving when the task type is `BACKUP PIECE`. |
-| DEST_ID | The ID of the backup destination. |
-| START_TIMESTAMP | The time on the tenant when the task started. |
-| END_TIMESTAMP | The time on the tenant when the task ended. |
-| STATUS | The task status. Valid values:<ul><li> `INIT`: The task is in the initialization state. </li><li> `DOING`: The task is being executed. </li><li> `CANCELING`: The task is being canceled. </li><li> `COMPLETED`: The task is executed. </li><li> `FAILED`: The task failed. </li><li> `CANCELED`: The task is canceled. </li></ul> |
-| TOTAL_LS_COUNT | The total number of log streams under the task. |
-| FINISH_LS_COUNT | The number of successful log stream tasks. |
-| RESULT | The task execution result, which is an error code. |
-| COMMENT | The description of a failed cleanup task. |
-| PATH | The path where the backup data is located. |
+| ROUND_ID | The round of log archiving when the task type is `BACKUP PIECE`.  |
+| DEST_ID | The ID of the backup destination.  |
+| START_TIMESTAMP | The time on the tenant when the task started.  |
+| END_TIMESTAMP | The time on the tenant when the task ended.  |
+| STATUS | The task status. Valid values:<ul><li> `INIT`: The task is in the initialization state.  </li><li> `DOING`: The task is being executed.  </li><li> `CANCELING`: The task is being canceled.  </li><li> `COMPLETED`: The task is executed.  </li><li> `FAILED`: The task failed.  </li><li> `CANCELED`: The task is canceled.  </li></ul> |
+| TOTAL_LS_COUNT | The total number of log streams under the task.  |
+| FINISH_LS_COUNT | The number of successful log stream tasks.  |
+| RESULT | The task execution result, which is an error code.  |
+| COMMENT | The description of a failed cleanup task.  |
+| PATH | The path where the backup data is located.  |
 
 ## CDB_OB_BACKUP_DELETE_POLICY
 
@@ -186,9 +186,9 @@ You can query this view from the sys tenant for information about in-effect back
 
 | Field | Description |
 |------|-------|
-| TENANT_ID | The ID of the tenant. |
-| POLICY_NAME | The name of the cleanup strategy. |
-| RECOVERY_WINDOW | The recovery window. |
+| TENANT_ID | The ID of the tenant.  |
+| POLICY_NAME | The name of the cleanup strategy.  |
+| RECOVERY_WINDOW | The restorable window.  |
 
 ## DBA_OB_BACKUP_DELETE_POLICY
 
@@ -198,12 +198,12 @@ You can query this view from a user tenant for information about in-effect backu
 
    | Field | Description |
    |--------|-------|
-   | POLICY_NAME | The name of the cleanup strategy. |
-   | RECOVERY_WINDOW | The recovery window. Default value: `0`. |
+   | POLICY_NAME | The name of the cleanup strategy.  |
+   | RECOVERY_WINDOW | The restorable window. Default value: `0`.  |
 
 * Oracle mode
 
    | Field | Description |
    |--------|-------|
-   | POLICY_NAME | The name of the cleanup strategy. |
-   | RECOVERY_WINDOW | The recovery window. Default value: `0`. |
+   | POLICY_NAME | The name of the cleanup strategy.  |
+   | RECOVERY_WINDOW | The restorable window. Default value: `0`.  |
