--- a/en-US/6.manage/6.backup-and-recovery/6.restore-data/4.view-the-restore-progress.md
+++ b/en-US/6.manage/6.backup-and-recovery/6.restore-data/4.view-the-restore-progress.md
@@ -1,18 +1,18 @@
-# Query the recovery progress
+# Query the restore progress
 
-After you perform full recovery, you can query a view for the recovery progress.
+After you perform full restore, you can query a view for the restore progress.
 
 ## Procedure
 
-1. Log on to the `sys` tenant of a cluster as the `root` user.
+1. Log on to the `sys` tenant of the cluster as the `root` user.
 
-2. Execute the following statement to go to the database named `oceanbase`:
+2. Access the database named `oceanbase`.
 
    ```shell
    obclient [(none)]> USE oceanbase;
    ```
 
-3. Execute the following statement to view the recovery progress:
+3. Execute the following statement to view the restore progress:
 
    ```shell
    obclient [oceanbase]> SELECT * FROM CDB_OB_RESTORE_PROGRESS\G
@@ -61,34 +61,34 @@ After you perform full recovery, you can query a view for the recovery progress.
    2 rows in set
    ```
 
-   This view records the parameters you entered during recovery, and other information such as the recovery progress.
+   This view records the parameters you entered during restore, and other information such as the restore progress.
 
-   After a recovery job is performed for a user tenant, two records are generated: one for the `sys` tenant and the other for the recovered user tenant. The job record for the `sys` tenant records the recovery information about the recovered tenant. The job record for the recovered tenant records its recovery progress.
+   After a restore job is performed for a user tenant, two records are generated: one for the `sys` tenant and the other for the restored user tenant.  The job record for the `sys` tenant records the restore information about the restored tenant. The job record for the restored tenant records its restore progress.
 
-   During recovery, pay attention to the `status` field in the recovery progress view.
+   During the restore, pay attention to the `status` field in the restore progress view.
 
    * For the sys tenant:
 
-      * `CREATE_TENANT`: The sys tenant is creating the tenant to be recovered.  After the tenant is created, the status changes to `WAIT_TENANT_RESTORE_FINISH`. If the creation failed, the status changes to `RESTORE_FAIL`.
+      * `CREATE_TENANT`: The sys tenant is creating the tenant to be restored.  After the tenant is created, the status changes to `WAIT_TENANT_RESTORE_FINISH`. If the creation failed, the status changes to `RESTORE_FAIL`.
 
-      * `WAIT_TENANT_RESTORE_FINISH`: The system is waiting for the recovery of the tenant to complete. After the tenant is recovered, the status changes to `RESTORE_SUCCESS`. If the recovery fails, the status changes to `RESTORE_FAIL`.
+      * `WAIT_TENANT_RESTORE_FINISH`: The system is waiting for the restore of the tenant to complete. After the tenant is restored, the status changes to `RESTORE_SUCCESS`. If the restore fails, the status changes to `RESTORE_FAIL`.
 
-      * `RESTORE_SUCCESS`: The tenant is recovered.
+      * `RESTORE_SUCCESS`: The tenant is restored.
 
-      * `RESTORE_FAIL`: The recovery of the tenant failed.
+      * `RESTORE_FAIL`: The restore of the tenant failed.
 
    * For the target tenant:
 
-      * `RESTORING`: Data of the tenant is being recovered. After the tenant is recovered, the status changes to `POST_CHECK`. If the recovery fails, the status changes to `RESTORE_FAIL`.
+      * `RESTORING`: Data of the tenant is being restored. After the tenant is restored, the status changes to `POST_CHECK`. If the restore fails, the status changes to `RESTORE_FAIL`.
 
-      * `POST_CHECK`: The system is checking the role of the tenant and recovering the tenant as a standby database. After the operation is completed, the status changes to `UPGRADE`. If the operation failed, the status changes to `RESTORE_FAIL`.
+      * `POST_CHECK`: The system is checking the role of the tenant and restoring the tenant as a standby database. After the operation is completed, the status changes to `UPGRADE`. If the operation failed, the status changes to `RESTORE_FAIL`.
 
-      * `UPGRADE`: The tenant is being upgraded. For recovery across versions, an upgrade is performed for the tenant. After the operation is completed, the status changes to `RESTORE_SUCCESS`. If the operation failed, the status changes to `RESTORE_FAIL`.
+      * `UPGRADE`: The tenant is being upgraded. For restore across versions, an upgrade is performed for the tenant. After the operation is completed, the status changes to `RESTORE_SUCCESS`. If the operation failed, the status changes to `RESTORE_FAIL`.
 
-      * `RESTORE_SUCCESS`: The recovery succeeded.
+      * `RESTORE_SUCCESS`: The restore succeeded.
 
-      * `RESTORE_FAIL`: The recovery failed.
+      * `RESTORE_FAIL`: The restore failed.
 
-   For more information about the `CDB_OB_RESTORE_PROGRESS` view, see [Views related to physical recovery](8.views-of-the-restore.md).
+   For more information about the `CDB_OB_RESTORE_PROGRESS` view, see [Views related to physical restore](9.views-of-the-restore.md).
 
-   After the recovery is completed, you can view the recovery result. For more information, see [Query the recovery result](5.view-the-restore-history.md).
+   After the restore is completed, you can view the restore result. For more information, see [Query the restore result](5.view-the-restore-history.md).
