--- a/en-US/6.manage/6.backup-and-recovery/6.restore-data/5.view-the-restore-history.md
+++ b/en-US/6.manage/6.backup-and-recovery/6.restore-data/5.view-the-restore-history.md
@@ -1,20 +1,20 @@
-# View the recovery results
+# Query the restore result
 
-After you perform full recovery, you can query views for the recovery result.
+After you perform full restore, you can query the related view for the restore result.
 
 ## Procedure
 
-1. Log on to the `sys` tenant of a cluster as the `root` user.
+1. Log on to the `sys` tenant of the cluster as the `root` user.
 
-2. Execute the following statement to go to the database named `oceanbase`:
+2. Access the database named `oceanbase`.
 
    ```shell
    obclient [(none)]> USE oceanbase;
    ```
 
-3. After the recovery job is completed, execute the following statements to view the recovery result:
+3. After the restore job is completed, execute the following statements to view the restore result.
 
-   Example:
+   For example:
 
    ```shell
    obclient [oceanbase]> SELECT * FROM CDB_OB_RESTORE_HISTORY\G
@@ -78,8 +78,12 @@ After you perform full recovery, you can query views for the recovery result.
 
    The fields in the `CDB_OB_RESTORE_HISTORY` view correspond to those in the `CDB_OB_RESTORE_PROGRESS` view. The `COMMENT` field records the error information of a failed job or task.
 
-   If the recovery failed, you can cancel the recovery by deleting the tenant. For more information, see [Cancel recovery](3.cancel-a-restore.md).
+   If the restore failed, you can cancel the restore by deleting the tenant. For more information, see [Cancel the restore](3.cancel-a-restore.md).
 
-## Subsequent operations
+## What to do next
 
-After the recovery succeeded, the recovered tenant is a backup tenant. You must run the failover statement to change the role of this tenant to the primary tenant. For more information, see [Change the role of a backup tenant to the primary tenant](6.active-standby-tenant.md).
+After the restore succeeded, the restored tenant is a standby tenant. You can perform the following operations:
+
+* Execute the `RECOVER` statement to proceed to log replay from the source tenant. For more information, see [Replay logs to a standby tenant](7.recover-the-standby-tenant.md).
+
+* Execute the ACTIVATE statement to change the role of the standby tenant to PRIMARY. For more information, see [Change the role of a standby tenant to PRIMARY](6.active-standby-tenant.md).
