--- a/en-US/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
+++ b/en-US/6.manage/6.backup-and-recovery/6.restore-data/8.parameters-of-the-restore.md
@@ -1,24 +1,24 @@
-# Parameters related to physical recovery
+# Parameters related to physical restore
 
-This topic describes the parameters in recovery statements.
+This topic describes the parameters in restore statements.
 
-## Parameters in recovery statements
+## Parameters in the RESTORE statements
 
 ### Statements
 
-* Recover to a specified timestamp
+* Restore to a specified timestamp
 
    ```shell
    obclient [(none)]>ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL TIME=timestamp WITH restore_option [DESCRIPTION description];
    ```
 
-* Recover to a specified SCN
+* Restore to a specified SCN
 
    ```shell
    obclient [(none)]>ALTER SYSTEM RESTORE dest_tenant_name FROM uri UNTIL SCN=scn WITH restore_option [DESCRIPTION description];
    ```
 
-* Recover to the latest checkpoint
+* Restore to the latest checkpoint
 
    ```shell
    obclient [(none)]> ALTER SYSTEM RESTORE dest_tenant_name FROM uri WITH restore_option [DESCRIPTION description];
@@ -26,33 +26,81 @@ This topic describes the parameters in recovery statements.
 
 ### Parameters
 
-| Parameter | Description |
-|--------------------|--------------|
-| dest_tenant_name | The name of the destination tenant to which the data is to be restored.  |
-| uri | The data backup path `backup_data_dest` and log archive path `log_archive_dest` specified during recovery. The value must contain at least one data backup path and one log archive path that are separated with a comma (`,`).  |
-| timestamp | The timestamp to which data is recovered. Join the parameter name and value with an equal sign (`=`). The timestamp must be in the `YYYY-MM-DD HH24:MI:SS.FF` format, accurate to nanoseconds.  |
-| scn | The SCN to which data is recovered. Join the parameter name and value with an equal sign (`=`).  |
-| restore_option | The recovery options, including `pool_list`, `locality`, `primary_zone`, and `kms_encrypt`. Separate different parameters with ampersands (`&`). <ul><li>`pool_list`: Required. The resource pool of the tenant. Multiple resource pools must be separated with commas (,). </li>  <li>`locality`: Optional. The locality of replicas of the new tenant, which must match the zone information of `pool_list` of the cluster where the new tenant is located. By default, if this parameter is not specified, a full-featured replica is set for each zone in `zone_list` of the resource pool. </br>Example: `locality='F@z1,F@z2,F@z3'` <li> `primary_zone`: Optional. The preferred position of the leader of the new tenant, which must match the settings of `pool_list` and `locality`. In other words, it must match the zone information and meet the constraint that `primary_region` must have at least two Paxos members. If this parameter is not specified, the system randomly distributes leaders in the zones specified by `zone_list` of `locality`.  </br>Example: `primary_zone='z1'`</li> <li>`kms_encrypt`: Optional. It specifies whether encryption information is required. If the value is `true`, the value of `kms_encrypt_info` specified in recovery preparations is required for recovery. Default value: `false`.  </li></ul> |
-| description | Optional. The description.  |
+| Parameter | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
+|--------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| dest_tenant_name | The name of the destination tenant to which the data is to be restored.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+| uri | The data backup path `backup_data_dest` and log archive path `log_archive_dest` specified during restore. The value must contain at least one data backup path and one log archive path that are separated with a comma (`,`).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| timestamp | The timestamp to which data is restored. Join the parameter name and value with an equal sign (`=`). The timestamp must be in the `YYYY-MM-DD HH24:MI:SS.FF` format, accurate to nanoseconds.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
+| scn | The SCN to which data is restored. Join the parameter name and value with an equal sign (`=`).                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
+| restore_option | The restore options, including `pool_list`, `locality`, `primary_zone`, and `kms_encrypt`. Separate the options with ampersands (`&`).  <ul><li>`pool_list`: Required. The resource pool of the tenant. Multiple resource pools must be separated with commas (,). </li>  <li>`locality`: Optional. The locality of replicas of the new tenant, which must match the zone information of `pool_list` of the cluster where the new tenant is located.  By default, if this parameter is not specified, a full-featured replica is set for each zone in `zone_list` of the resource pool. </br>Example: `locality='F@z1,F@z2,F@z3'` <li> `primary_zone`: Optional. The preferred position of the leader of the new tenant, which must match the settings of `pool_list` and `locality`. In other words, it must match the zone information and meet the constraint that `primary_region` must have at least two Paxos members. If this parameter is not specified, the system randomly distributes leaders in the zones specified by `zone_list` of `locality`.  </br>Example: `primary_zone='z1'`</li> <li>`kms_encrypt`: Optional. This option specifies whether encryption information is required. If the value is `true`, the value of `kms_encrypt_info` specified in restore preparations is required. Default value: `false`.  </li></ul> |
+| description | Optional. The description.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
 
 ### Constraint for specifying the timestamp and SCN
 
-The specified timestamp and SCN must be within the range of [Minimum recovery SCN for data backup (`MIN_RESTORE_SCN`), maximum log archive SCN (`CHECKPOINT_SCN`)].
+The timestamp and SCN must be greater than or equal to the minimum restore SCN indicated by `MIN_RESTORE_SCN` in the data backup view `CDB_OB_BACKUP_SET_FILES`, and smaller than or equal to the maximum archive SCN indicated by `CHECKPOINT_SCN` in the log archive view `CDB_OB_ARCHIVE_LOG`. Log archiving may be interrupted. Therefore, you must consider inconsecutive ranges of logs when you specify the restore SCN. The restorable window may be discontinuous.
 
-## Parameters in the recovery performance tuning statement
+Assume that:
+
+* Two log archive rounds were initiated, with the  `round_id` values of `1` and `2`.
+
+* Three data backup jobs were initiated, which produced three valid data backup sets: `full_backup_set_1`, `full_backup_set_2`, and `inc_backup_set_3`.
+
+The following figure shows the restorable window for physical restore. The right boundary of a data backup set is specified by `MIN_RESTORE_SCN`. For example, `MIN_RESTORE_SCN` of `full_backup_set_1` corresponds to `scn 300` in the figure. The right boundary of a log archive is specified by `CHECKPOINT_SCN`. For example, `CHECKPOINT_SCN` of `round 1` corresponds to `scn 500` in the figure.
+
+![Restorable window](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/user-guide/backup-and-restore/restore-window.jpg)
+
+Log archiving may be interrupted. Therefore, you must consider the inconsecutive time ranges when you calculate the restorable window. As a result, the restorable window is discontinuous. In the figure, the restorable window is `[scn 300, scn 500] u [scn 900, scn 1500]`.
+
+## Parameters in the restore performance tuning statement
 
 ### Statement
 
 ```shell
-obclient [(none)]> ALTER SYSTEM SET ha_low_thread_score =10 TENANT = mysql;
+obclient [(none)]> ALTER SYSTEM SET ha_high_thread_score =10 TENANT = mysql;
 ```
+
+### Parameter
+
+| Parameter | Description                                                |
+|-----------------------------|------------------------------------------------------------|
+| ha_high_thread_score | Specifies the weight of threads for the restore job queue. |
+
+## Parameters in the RECOVER statements
+
+### Statements
+
+* Replay logs to the specified timestamp.
+
+   ```sql
+   ALTER SYSTEM RECOVER STANDBY [TENANT tenant_name] UNTIL TIME='timestamp';
+   ```
+
+* Replay logs to the specified SCN.
+
+   ```sql
+   ALTER SYSTEM RECOVER STANDBY [TENANT tenant_name] UNTIL SCN=scn;
+   ```
+
+* Continuously replay logs from the archive source without specifying the end point.
+
+   ```sql
+   ALTER SYSTEM RECOVER STANDBY [TENANT tenant_name] UNTIL UNLIMITED;
+   ```
+
+* Cancel a log replay
+
+   ```sql
+   ALTER SYSTEM RECOVER STANDBY TENANT tenant_name CANCEL;
+   ```
 
 ### Parameters
 
-| Parameter | Description |
-|-----------------------------|------------------------------------------------|
-| ha_low_thread_score | Specifies the weight of threads for the recovery task queue.  |
-
+| Parameter | Description                                                                                                                                                                                     |
+|-----------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| tenant_name | The tenant name.                                                                                                                                                                                |
+| timestamp | The timestamp to which data is restored. Join the parameter name and value with an equal sign (`=`). The timestamp must be in the `YYYY-MM-DD HH24:MI:SS.FF` format, accurate to nanoseconds. |
+| scn | The SCN to which data is restored. Join the parameter name and value with an equal sign (`=`).                                                                                              |
+| UNLIMITED | Specifies to continuously replay logs from the archive source without specifying the end point.                                                                                                 |
 
 ## Parameters in the ACTIVATE statement
 
@@ -66,4 +114,4 @@ obclient [(none)]> ALTER SYSTEM ACTIVATE STANDBY TENANT tenant_name;
 
 | Parameter | Description |
 |--------------------|-------------------|
-| tenant_name | The name of the backup tenant that is recovered. You can use this statement to change the role of only one tenant at a time.  |
+| tenant_name | The name of the standby tenant that is restored. You can use this statement to change the role of only one tenant at a time.  |
