--- a/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
+++ b/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/2.stop-cleaning-backup-data.md
@@ -4,7 +4,7 @@ In the current version, you can stop only automatic backup cleanup jobs. To stop
 
 ## Delete a cleanup strategy
 
-### Usage notes
+### Considerations
 
 * If you delete all cleanup strategies for a tenant, automatic cleanup is disabled for the tenant.
 
@@ -12,15 +12,13 @@ In the current version, you can stop only automatic backup cleanup jobs. To stop
 
 ### Delete a cleanup strategy of a user tenant from the sys tenant
 
-1. Log on to the `sys` tenant of a cluster as the `root` user.
+1. Log on to the `sys` tenant of the cluster as the `root` user.
 
-2. Execute the following statement to delete a cleanup strategy:
+2. Execute the following statement to delete a cleanup strategy.
 
    ```shell
    obclient [(none)]> ALTER SYSTEM DROP DELETE BACKUP POLICY policy_name TENANT tenant_name;
    ```
-
-   Notes:
 
    * The `POLICY` parameter specifies the name of the cleanup strategy to be deleted. You can query the `CDB_OB_BACKUP_DELETE_POLICY` view for the strategy.
 
@@ -37,13 +35,12 @@ In the current version, you can stop only automatic backup cleanup jobs. To stop
 1. Log on to the database as a tenant administrator.
 
    <main id="notice" type='explain'>
-   <h4>Note:</h4>
-   <p>The administrator user is <code>root</code> for MySQL tenants and <code>SYS</code> for Oracle tenants. </p>
+   <h4>Note</h4>
+   <p>The administrator user of a MySQL user tenant is <code>root</code> and that of an Oracle user tenant is <code>SYS</code>. </p>
    </main>
 
-2. Execute the following statement to delete a cleanup strategy:
+2. Execute the following statement to delete a cleanup strategy.
 
-   Sample statement:
 
    ```shell
    obclient [(none)]> ALTER SYSTEM DROP DELETE BACKUP POLICY policy_name;
@@ -67,7 +64,7 @@ After you delete a cleanup strategy, you can query views to verify whether the c
 
    * In the sys tenant, query the `oceanbase.CDB_OB_BACKUP_DELETE_POLICY` view to verify whether the cleanup strategy of the specified tenant has been deleted.
 
-      Example:
+      For example:
 
       ```shell
       obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_POLICY  WHERE tenant_id = 1002;
@@ -76,13 +73,13 @@ After you delete a cleanup strategy, you can query views to verify whether the c
 
    * In a user tenant, query the `oceanbase.DBA_OB_BACKUP_DELETE_POLICY` or `sys.DBA_OB_BACKUP_DELETE_POLICY` view to verify whether the cleanup strategy of the current tenant has been deleted.
 
-      * MySQL tenants
+      * MySQL tenant
 
          ```shell
          obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_BACKUP_DELETE_POLICY;
          ```
 
-      * Oracle tenants
+      * Oracle tenant
 
          ```shell
          obclient [SYS]> SELECT * FROM sys.DBA_OB_BACKUP_DELETE_POLICY;
@@ -90,7 +87,7 @@ After you delete a cleanup strategy, you can query views to verify whether the c
 
    If the cleanup strategy of the tenant does not exist in the view, the cleanup strategy has been deleted.
 
-### Subsequent operations
+### What to do next
 
 After you delete the cleanup strategy, set a new cleanup strategy as soon as possible. Otherwise, backup files can use up the disk space, affecting subsequent backup operations. For more information about how to set a cleanup strategy, see [Automatic cleanup of expired backup data](1.cleaning-up-backed-up-data-automatically.md).
 
@@ -108,7 +105,7 @@ After you delete the cleanup strategy, set a new cleanup strategy as soon as pos
 
 ### Cancel ongoing cleanup jobs from the sys tenant
 
-1. Log on to the `sys` tenant as the `root` user.
+1. Log on to the `sys` tenant of the cluster as the `root` user.
 
 2. Execute the following statement to stop the ongoing cleanup jobs of a specified tenant:
 
@@ -118,7 +115,7 @@ After you delete the cleanup strategy, set a new cleanup strategy as soon as pos
 
    The `TENANT` parameter specifies the name of the user tenant whose cleanup jobs are to be canceled. You can specify multiple user tenant names. The ongoing cleanup jobs of the specified user tenant will be canceled.
 
-   To cancel the ongoing cleanup jobs of the `MySQL` and `Oracle` tenants from the sys tenant, execute the following statement. Example:
+   To cancel the ongoing cleanup jobs of the `MySQL` and `Oracle` tenants from the sys tenant, execute the following statement. For example:
 
    ```shell
    obclient [(none)]> ALTER SYSTEM CANCEL DELETE BACKUP TENANT MySQL, Oracle;
@@ -144,7 +141,7 @@ After you stop a cleanup job, you can query views to verify whether the cleanup 
 
       To query the execution status of the cleanup jobs of a specified user tenant from the sys tenant, execute the following statement:
 
-      ```shell
+      ```sql
       obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_BACKUP_DELETE_JOBS WHERE tenant_id = 1002\G
       *************************** 1. row ***************************
                       TENANT_ID: 1002
@@ -177,7 +174,7 @@ After you stop a cleanup job, you can query views to verify whether the cleanup 
 
    2. Query historical cleanup jobs.
 
-      You can query the `oceanbase.CDB_OB_BACKUP_DELETE_JOB_HISTORY` view from the sys tenant for the historical cleanup jobs of all tenants. You can query the `oceanbase.DBA_OB_BACKUP_DELETE_JOB_HISTORY` view from a user tenant in MySQL mode or the `sys.DBA_OB_BACKUP_DELETE_JOB_HISTORY` view from a user tenant in Oracle mode for historical cleanup jobs.
+      You can query the `oceanbase.CDB_OB_BACKUP_DELETE_JOB_HISTORY` view from the sys tenant for the historical cleanup jobs of all tenants. You can query the `oceanbase.DBA_OB_BACKUP_DELETE_JOB_HISTORY` view from a user tenant in MySQL mode or the `sys.DBA_OB_BACKUP_DELETE_JOB_HISTORY` view from a user tenant in Oracle mode for the historical cleanup jobs of the current tenant.
 
       To query the historical cleanup jobs of a specified user tenant from the sys tenant, execute the following statement:
 
