--- a/en-US/6.manage/6.backup-and-recovery/6.restore-data/3.cancel-a-restore.md
+++ b/en-US/6.manage/6.backup-and-recovery/6.restore-data/3.cancel-a-restore.md
@@ -1,17 +1,17 @@
-# Cancel recovery
+# Cancel the restore
 
-You can cancel an ongoing recovery job of a tenant by deleting the tenant.
+You can cancel an ongoing restore job of a tenant by deleting the tenant.
 
 ## Procedure
 
-1. Log on to the `sys` tenant of a cluster as the `root` user.
+1. Log on to the `sys` tenant of the cluster as the `root` user.
 
-2. Execute the following statement to delete the tenant for which data is to be recovered:
+2. Execute the following statement to delete the tenant for which data is to be restored:
 
    ```sql
    obclient> DROP TENANT tenant_name FORCE;
    ```
 
-   Set `tenant_name` to the name of the tenant for which data is to be recovered.
+   Set `tenant_name` to the name of the tenant for which data is to be restored.
 
    For more information about how to delete a tenant, see [Delete a tenant](../../2.tenant-management/6.common-tenant-operations/12.delete-tenant.md).
